welcome.lessons.welcome.conditions.Conditions.scala.code
if {Buggle1 est FaceMur} avance();